buildscript {
    ext {
        springBootVersion = '1.5.9.RELEASE'
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

apply plugin: 'idea'
apply plugin: 'java'
apply plugin: 'org.springframework.boot'


repositories {
    mavenCentral()
}

compileJava {
    sourceCompatibility = 9
    targetCompatibility = 9

    options.fork = true
    options.forkOptions.executable = 'javac'

    options.encoding = "UTF-8"
    options.compilerArgs += [
            "--add-modules", "java.xml.ws.annotation"
    ]
}

dependencies {
    // springboot
//    compile('org.springframework.boot:spring-boot-starter-data-jpa')
//    compile('org.springframework.boot:spring-boot-starter-security')
//    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
    compile('org.springframework.boot:spring-boot-starter-web')

    // database
//    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.2.1'

    // https://mvnrepository.com/artifact/org.projectlombok/lombok
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.18'

    testCompile('org.springframework.boot:spring-boot-starter-test')
    testCompile('org.springframework.security:spring-security-test')
}

task wrapper (type: Wrapper){
    gradleVersion = '4.4'
}
